# sme-robot-mobile

./: .gitignore  LICENSE  README.md  debug_robot.urdf
docs/diagram/frames/: frames.gv
src/sme_robot_mobile_description/: CMakeLists.txt  README.md  package.xml
src/sme_robot_mobile_description/config/: nav_params.yaml
src/sme_robot_mobile_description/launch/: display.launch  display.launch.py  gazebo.launch  gazebo.launch.py
src/sme_robot_mobile_description/rviz/: rviz.rviz
src/sme_robot_mobile_description/scripts/: simple_behavior_tree.py
src/sme_robot_mobile_description/urdf/: sme_robot_mobile_base.xacro  sme_robot_mobile_robot.xacro  sme_robot_mobile_sensors.xacro
src/sme_robot_mobile_navigation/: CMakeLists.txt  README.md  package.xml
src/sme_robot_mobile_navigation/config/: costmap_common_params.yaml  global_costmap_params_slam.yaml  global_planner_params.yaml  move_base_params.yaml  nav2_params.yaml  navfn_planner_params.yaml  teb_local_planner_params.yaml
src/sme_robot_mobile_navigation/config/common/: costmap_common_params.yaml
src/sme_robot_mobile_navigation/config/global_planner/costmap/: global_costmap_params.yaml  global_costmap_params_slam.yaml
src/sme_robot_mobile_navigation/config/global_planner/planners/: dwa_local_planner_params.yaml  navfn_planner_params.yaml
src/sme_robot_mobile_navigation/config/gmapping/: gmapping_params.yaml
src/sme_robot_mobile_navigation/config/local_planner/costmap/: local_costmap_params.yaml
src/sme_robot_mobile_navigation/config/slam_toolbox/: slam_toolbox_params.yaml
src/sme_robot_mobile_navigation/launch/: navigation.launch  navigation.launch.py  slam.launch.py  slam_gmapping.launch  slam_navigation.launch  slam_toolbox_navigation.launch
src/sme_robot_mobile_navigation/maps/: map.pgm
src/sme_robot_mobile_navigation/rviz/: navigation.rviz  slam.rviz
src/sme_robot_mobile_navigation/worlds/: test_room.world
