<?xml version="1.0"?>
<package format="3">
  <name>sme_robot_mobile_description</name>
  <version>0.0.1</version>
  <description>
    A comprehensive example of a 4-wheeled mobile manipulator with navigation, 
    perception, and behavior tree integration for ROS2.
  </description>

  <maintainer email="ismael.pbt@gmail.com">Ismael Poblete</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>urdf</depend>
  <depend>xacro</depend>
  <depend>ros_gz_sim</depend>
  <depend>ros_gz_bridge</depend>
  <depend>ros_gz_image</depend>
  <depend>ros_gz_interfaces</depend>
  <depend>robot_state_publisher</depend>
  <depend>joint_state_publisher</depend>
  <depend>joint_state_publisher_gui</depend>
  <depend>rviz2</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
