<?xml version="1.0"?>
<package format="2">
  <name>sme_robot_mobile_navigation</name>
  <version>0.0.1</version>
  <description>
    Package containing configuration and launch files for autonomous navigation
    (move_base, amcl, map_server).
  </description>

  <maintainer email="ismael.pbt@gmail.com">Ismael Poblete</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>move_base</depend>
  <depend>amcl</depend>
  <depend>map_server</depend>
  <depend>dwa_local_planner</depend>

</package>
