<?xml version="1.0"?>
<package format="3">
  <name>sme_robot_mobile_navigation</name>
  <version>0.0.1</version>
  <description>
    Package containing configuration and launch files for autonomous navigation
    (Nav2, slam_toolbox).
  </description>

  <maintainer email="ismael.pbt@gmail.com">Ismael Poblete</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>nav2_bringup</depend>
  <depend>nav2_amcl</depend>
  <depend>nav2_map_server</depend>
  <depend>slam_toolbox</depend>
  <depend>nav2_lifecycle_manager</depend>
  <depend>nav2_plan_execution</depend>
  <depend>nav2_waypoint_follower</depend>
  <depend>nav2_controller</depend>
  <depend>nav2_planner</depend>
  <depend>nav2_recoveries</depend>
  <depend>nav2_bt_navigator</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
